fix: allow vercel frontend origin in CORS configuration